<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/buttonMic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/mic_icon" />

    <Button
        android:id="@+id/buttonEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:text="@string/buttonEvents"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/buttonHelp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonExit"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>